--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -71,7 +71,7 @@ jobs:
         $GITHUB_WORKSPACE/$DIY_P1_SH
 
     - name: Update feeds
-      run: cd openwrt && ./scripts/feeds update -a
+      run: cd openwrt && ./scripts/feeds update -a 
 
     - name: Change default package
       run: |
@@ -82,10 +82,10 @@ jobs:
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
 
-    - name: Reupdate feeds 
-      run: | 
-        cd openwrt 
-        ./scripts/feeds update -a && ./scripts/feeds install -a
+#    - name: Reupdate feeds 
+#      run: | 
+#        cd openwrt 
+#        ./scripts/feeds update -a && ./scripts/feeds install -a
 
     - name: Load custom configuration
       run: |
@@ -109,8 +109,8 @@ jobs:
       run: |
         cd openwrt
         echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 || make -j1 V=s  || echo -e "Something Wrong!" 
-        echo "STATUS=success" >>$GITHUB_OUTPUT
+        echo "make -j$(nproc) || make -j1 || make -j1 V=s  || echo -e 'Something Wrong!' "
+        make -j1 V=s &&  echo "STATUS=success" >>$GITHUB_OUTPUT ||  echo "STATUS=failed" >>$GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
